--- a/package.json
+++ b/package.json
@@ -35,11 +35,14 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-async-storage": "^0.0.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-picker": "^4.3.7",
     "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated-carousel": "^4.0.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-toast-message": "^2.2.1",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5"
