--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native": "0.76.6",
     "react-native-async-storage": "^0.0.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-picker": "^4.3.7",
     "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^4.0.0",
