--- a/package.json
+++ b/package.json
@@ -38,16 +38,19 @@
     "react-dom": "18.3.1",
     "react-native": "^0.76.7",
     "react-native-async-storage": "^0.0.1",
+    "react-native-calendars": "^1.1310.0",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-picker": "^4.3.7",
     "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^4.0.0",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.4.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-toast-message": "^2.2.1",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-walkthrough-tooltip": "^1.6.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5"
   },
@@ -55,6 +58,8 @@
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
+    "@types/react-native-snap-carousel": "^3.8.11",
+    "@types/react-navigation": "^3.0.8",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.5",
